apps/podinfo/k8s-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: podinfo
  namespace: apps
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 9898
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: podinfo
