apps/podinfo/k8s-network-policies.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: podinfo
  namespace: apps
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: podinfo
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - {}
  egress:
    - {}
